--- a/demo/app/demos/autocomplete/demo.component.html
+++ b/demo/app/demos/autocomplete/demo.component.html
@@ -8,7 +8,7 @@
          />
 </vcl-input-field>
 
-<vcl-autocomplete #acCountries="vclAutocomplete">
+<ng-template vclAutocomplete #acCountries="vclAutocomplete">
   <vcl-select-list>
     <vcl-select-list-header>Europe</vcl-select-list-header>
     <vcl-select-list-item value="Greece">
@@ -35,4 +35,4 @@
       Thailand
     </vcl-select-list-item>
   </vcl-select-list>
-</vcl-autocomplete>
+</ng-template>
