--- a/demo/app/demos/token/demo.component.html
+++ b/demo/app/demos/token/demo.component.html
@@ -21,11 +21,7 @@
 <br/>
 
 <h3>token-input</h3>
-<vcl-token-input (valueChange)="onInputChange($event);">
-  <input vclInput />
-</vcl-token-input>
+<vcl-token-input (valueChange)="onInputChange($event);"></vcl-token-input>
 
 <h3>token-input (disabled)</h3>
-<vcl-token-input [disabled]="true">
-  <input vclInput />
-</vcl-token-input>
+<vcl-token-input [disabled]="true"></vcl-token-input>
