--- a/demo/styles.scss
+++ b/demo/styles.scss
@@ -1,5 +1,5 @@
 @use "~normalize.css" as normalize;
-@use '@angular/cdk/overlay-prebuilt.css';
+@use "@angular/cdk/overlay-prebuilt.css";
 @use "~@vcl/vcl";
 
 @use "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
@@ -18,3 +18,4 @@
 
 @use "./styles/demo.scss";
 @use "./styles/md.css";
+@use "./styles/prism.scss";
