--- a/lib/ng-vcl/src/panel/panel.component.html
+++ b/lib/ng-vcl/src/panel/panel.component.html
@@ -1,5 +1,5 @@
 <ng-content select="vcl-panel-header"></ng-content>
-<div class="panel-header no-bg" *ngIf="showCloseButton || hasTitle">
+<div class="panel-header no-bg px-0" *ngIf="showCloseButton || hasTitle">
   <div class="row justify-content-between align-items-center">
     <ng-content select="vcl-panel-title"></ng-content>
     <button vcl-square-button *ngIf="showCloseButton" type="button" (click)="onCloseClick()" class="transparent">
