--- a/lib/ng-vcl/src/jss-form/jss-form.component.html
+++ b/lib/ng-vcl/src/jss-form/jss-form.component.html
@@ -1,3 +1,3 @@
-<form class="form" novalidate #form="ngForm" [formGroup]="field.control" (ngSubmit)="formSubmit.emit(form.value)">
+<form vclForm #form="vclForm" novalidate [formGroup]="field.control" (ngSubmit)="formSubmit.emit(form.value)">
   <ng-template [cdkPortalOutlet]="portal"></ng-template>
 </form>
