--- a/demo/app/demos/jss-form/demo.component.html
+++ b/demo/app/demos/jss-form/demo.component.html
@@ -1,6 +1,7 @@
 <h2>Create a hero</h2>
 
 <vcl-jss-form 
+  style="max-width: 40em;"
   #heroForm="vclJssForm"
   [schema]="heroSchema" 
   (formSubmit)="onSubmit()" 
