refactor(button): implement button square mode as option
BREAKING CHANGE: `vcl-square-button` is removed. Use square option instead. Example: `<button
vcl-button square>...</button>`

--- a/demo/app/components/app/app.component.html
+++ b/demo/app/components/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="col docMain">
     <header class="application-header row center justify-between">
-      <button vcl-square-button class="transparent" *ngIf="xsmall" (click)="drawer.toggle()">
+      <button vcl-button square class="transparent" *ngIf="xsmall" (click)="drawer.toggle()">
         <vcl-icon icon="vcl:menu" class="scale180p"></vcl-icon>
       </button>
       <div role="banner">
