--- a/demo/app/demos/button-group/demo.component.html
+++ b/demo/app/demos/button-group/demo.component.html
@@ -16,13 +16,13 @@
 
 <h3>Horizontal button group (multiple selection)</h3>
 <vcl-button-group selectionMode="multiple" [(value)]="value3">
-  <button vcl-square-button [value]="'italic'">
+  <button vcl-button square [value]="'italic'">
     <vcl-icon icon="fas:italic"></vcl-icon>
   </button>
-  <button vcl-square-button [value]="'bold'">
+  <button vcl-button square [value]="'bold'">
     <vcl-icon icon="fas:bold"></vcl-icon>
   </button>
-  <button vcl-square-button [value]="'underline'">
+  <button vcl-button square [value]="'underline'">
     <vcl-icon icon="fas:underline"></vcl-icon>
   </button>
 </vcl-button-group>
@@ -31,13 +31,13 @@
 
 <h3>Disabled button group</h3>
 <vcl-button-group [disabled]="true" selectionMode="multiple">
-  <button vcl-square-button [value]="'italic'">
+  <button vcl-button square [value]="'italic'">
     <vcl-icon icon="fas:italic"></vcl-icon>
   </button>
-  <button vcl-square-button [value]="'bold'">
+  <button vcl-button square [value]="'bold'">
     <vcl-icon icon="fas:bold"></vcl-icon>
   </button>
-  <button vcl-square-button [value]="'underline'">
+  <button vcl-button square [value]="'underline'">
     <vcl-icon icon="fas:underline"></vcl-icon>
   </button>
 </vcl-button-group>
