--- a/demo/app/demos/calendar/demo.component.html
+++ b/demo/app/demos/calendar/demo.component.html
@@ -45,7 +45,7 @@ Value: {{smonthArray}}
         <button vcl-button class="transparent flex" type="button" (click)="c.viewDate = today">
           go to today
         </button>
-        <button vcl-square-button class="transparent flex" type="button" (click)="c.viewDate = c.value">
+        <button vcl-button square class="transparent flex" type="button" (click)="c.viewDate = c.value">
           go to selected
         </button>
       </div>
