--- a/demo/app/demos/form-control-group/demo.component.html
+++ b/demo/app/demos/form-control-group/demo.component.html
@@ -15,7 +15,7 @@
       <vcl-input-field>
         <input vclInput formControlName="name">
       </vcl-input-field>
-      <button vcl-square-button class="transparent" (click)="help.open({data: { header: 'Name', text: 'The name of the hero. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi ad excepturi molestiae esse unde repellendus ex accusantium officia placeat voluptatem commodi et, laboriosam laudantium, cum, ratione debitis inventore? Esse, eaque!'}})" type="button">
+      <button vcl-button square class="transparent" (click)="help.open({data: { header: 'Name', text: 'The name of the hero. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi ad excepturi molestiae esse unde repellendus ex accusantium officia placeat voluptatem commodi et, laboriosam laudantium, cum, ratione debitis inventore? Esse, eaque!'}})" type="button">
         <vcl-icon class="scale130p" icon="vcl:info"></vcl-icon>
       </button>
     </div>
