--- a/lib/ng-vcl/src/button/button.component.html
+++ b/lib/ng-vcl/src/button/button.component.html
@@ -1,1 +1,4 @@
-<ng-content></ng-content>
+<vcl-icogram>
+  <ng-content></ng-content>
+</vcl-icogram>
+<ng-content select="vcl-icogram"></ng-content>
