--- a/lib/ng-vcl/src/calendar/views/month.component.html
+++ b/lib/ng-vcl/src/calendar/views/month.component.html
@@ -1,11 +1,11 @@
 <div class="d-g-row">
   <div class="d-g-cell toolbar">
     <div class="flex row justify-between center" role="menubar">
-      <button vcl-square-button class="transparent" type="button" (click)="onGoToPrevMonth()">
+      <button vcl-button square class="transparent" type="button" (click)="onGoToPrevMonth()">
         <vcl-icon icon="vcl:arrow-left"></vcl-icon>
       </button>
       <button vcl-button class="transparent cal-header-label" (click)="onLabelClick()">{{calendar.yearAndMonthLabel}}</button>
-      <button vcl-square-button class="transparent" type="button" (click)="onGoToNextMonth()">
+      <button vcl-button square class="transparent" type="button" (click)="onGoToNextMonth()">
         <vcl-icon icon="vcl:arrow-right"></vcl-icon>
       </button>
     </div>
