--- a/lib/ng-vcl/src/calendar/views/year.component.html
+++ b/lib/ng-vcl/src/calendar/views/year.component.html
@@ -2,11 +2,11 @@
 <div class="d-g-row">
   <div class="d-g-cell toolbar">
     <div class="flex row justify-between center" role="menubar">
-      <button vcl-square-button class="transparent" type="button" (click)="onGoToPrevYear()">
+      <button vcl-button square class="transparent" type="button" (click)="onGoToPrevYear()">
         <vcl-icon icon="vcl:arrow-left"></vcl-icon>
       </button>
       <button vcl-button class="transparent cal-header-label" (click)="onLabelClick()">{{calendar.label}}</button>
-      <button vcl-square-button class="transparent" type="button" (click)="onGoToNextYear()">
+      <button vcl-button square class="transparent" type="button" (click)="onGoToNextYear()">
         <vcl-icon icon="vcl:arrow-right"></vcl-icon>
       </button>
     </div>
