--- a/lib/ng-vcl/src/calendar/views/years.component.html
+++ b/lib/ng-vcl/src/calendar/views/years.component.html
@@ -1,11 +1,11 @@
 <div class="d-g-row">
   <div class="d-g-cell toolbar">
     <div class="flex row justify-between center" role="menubar">
-      <button vcl-square-button class="transparent" type="button" (click)="onGoToPrevYears()">
+      <button vcl-button square class="transparent" type="button" (click)="onGoToPrevYears()">
         <vcl-icon icon="vcl:arrow-left"></vcl-icon>
       </button>
       <span class="cal-header-label">{{calendar.label}}</span>
-      <button vcl-square-button class="transparent" type="button" (click)="onGoToNextYears()">
+      <button vcl-button square class="transparent" type="button" (click)="onGoToNextYears()">
         <vcl-icon icon="vcl:arrow-right"></vcl-icon>
       </button>
     </div>
