--- a/lib/ng-vcl/src/datepicker/datepicker.component.html
+++ b/lib/ng-vcl/src/datepicker/datepicker.component.html
@@ -8,7 +8,7 @@
        (blur)="onBlur()"
        >
 <button #btn
-        vcl-square-button
+        vcl-button square
         type="button"
         tabindex="-1"
         [disabled]="isDisabled"
