--- a/lib/ng-vcl/src/notifier/notifier.component.html
+++ b/lib/ng-vcl/src/notifier/notifier.component.html
@@ -3,7 +3,7 @@
     <span>{{notifierOverlayRef.title}}</span>
   </div>
   <div class="flex"></div>
-  <button vcl-square-button *ngIf="showCloseButton" type="button" (click)="onCloseClick()" class="transparent">
+  <button vcl-button square *ngIf="showCloseButton" type="button" (click)="onCloseClick()" class="transparent">
     <vcl-icon icon="vcl:close"></vcl-icon>
   </button>  
 </div>
