--- a/lib/ng-vcl/src/password-input/password-input.component.html
+++ b/lib/ng-vcl/src/password-input/password-input.component.html
@@ -1,5 +1,5 @@
 <ng-content select="input[vclInput]"></ng-content>
-<button vcl-square-button
+<button vcl-button square
         class="appended"
         type="button"
         [disabled]="isDisabled"
