--- a/lib/ng-vcl/src/select/select.component.html
+++ b/lib/ng-vcl/src/select/select.component.html
@@ -9,7 +9,7 @@
        readonly
        >
 <button #btn
-        vcl-square-button
+        vcl-button square
         type="button"
         tabindex="-1"
         [disabled]="isDisabled"
