--- a/lib/ng-vcl/src/token/token.component.html
+++ b/lib/ng-vcl/src/token/token.component.html
@@ -1,7 +1,7 @@
 <span class="token-label">
   <ng-content></ng-content>
 </span>
-<button vcl-square-button
+<button vcl-button square
         type="button"
         [disabled]="isDisabled"
         *ngIf="removable" 
