--- a/demo/app/demos/notifier/demo.component.html
+++ b/demo/app/demos/notifier/demo.component.html
@@ -1,12 +1,12 @@
 
 <vcl-button-group [(value)]="position" mode="single">
-  <button vcl-square-button [value]="positions.TopRight"><vcl-icon icon="mdi:arrow-top-right"></vcl-icon></button>
-  <button vcl-square-button [value]="positions.Top"><vcl-icon icon="mdi:arrow-up"></vcl-icon></button>
-  <button vcl-square-button [value]="positions.TopLeft"><vcl-icon icon="mdi:arrow-top-left"></vcl-icon></button>
-  <button vcl-square-button [value]="positions.BottomRight"><vcl-icon icon="mdi:arrow-bottom-right"></vcl-icon></button>
-  <button vcl-square-button [value]="positions.Bottom"><vcl-icon icon="mdi:arrow-down"></vcl-icon></button>
-  <button vcl-square-button [value]="positions.BottomLeft"><vcl-icon icon="mdi:arrow-bottom-left"></vcl-icon></button>
-  <button vcl-square-button [value]="positions.Center"><vcl-icon icon="mdi:arrow-all"></vcl-icon></button>
+  <button vcl-button square [value]="positions.TopRight"><vcl-icon icon="mdi:arrow-top-right"></vcl-icon></button>
+  <button vcl-button square [value]="positions.Top"><vcl-icon icon="mdi:arrow-up"></vcl-icon></button>
+  <button vcl-button square [value]="positions.TopLeft"><vcl-icon icon="mdi:arrow-top-left"></vcl-icon></button>
+  <button vcl-button square [value]="positions.BottomRight"><vcl-icon icon="mdi:arrow-bottom-right"></vcl-icon></button>
+  <button vcl-button square [value]="positions.Bottom"><vcl-icon icon="mdi:arrow-down"></vcl-icon></button>
+  <button vcl-button square [value]="positions.BottomLeft"><vcl-icon icon="mdi:arrow-bottom-left"></vcl-icon></button>
+  <button vcl-button square [value]="positions.Center"><vcl-icon icon="mdi:arrow-all"></vcl-icon></button>
 </vcl-button-group>
 
 <br><br>
