--- a/lib/ng-vcl/src/alert/alert.component.html
+++ b/lib/ng-vcl/src/alert/alert.component.html
@@ -1,7 +1,7 @@
 <div class="panel panel-dialog m-0" [ngClass]="alertClass" style="min-width: 25em" role="dialog">
   <div *ngIf="alert.title" class="panel-header no-bg row justify-between align-items-center">
     <h3 class="panel-title">{{alert.title}}</h3>
-    <button *ngIf="alert.showCloseButton" vcl-square-button class="transparent" (click)="close()">
+    <button *ngIf="alert.showCloseButton" vcl-button square class="transparent" (click)="close()">
       <vcl-icon icon="fas:times"></vcl-icon>
     </button>
   </div>
