--- a/lib/ng-vcl/src/notification/notification.component.html
+++ b/lib/ng-vcl/src/notification/notification.component.html
@@ -2,7 +2,7 @@
 <div class="notification-header title-container row align-items-center" *ngIf="hasTitle || showCloseButton">
   <ng-content select="vcl-notification-title"></ng-content>
   <div class="flex"></div>
-  <button vcl-square-button *ngIf="showCloseButton" type="button" (click)="onCloseClick()" class="transparent">
+  <button vcl-button square *ngIf="showCloseButton" type="button" (click)="onCloseClick()" class="transparent">
     <vcl-icon icon="vcl:close"></vcl-icon>
   </button>  
 </div>
