--- a/lib/ng-vcl/src/panel/panel.component.html
+++ b/lib/ng-vcl/src/panel/panel.component.html
@@ -2,7 +2,7 @@
 <div class="panel-header no-bg px-0" *ngIf="showCloseButton || hasTitle">
   <div class="row justify-content-between align-items-center">
     <ng-content select="vcl-panel-title"></ng-content>
-    <button vcl-square-button *ngIf="showCloseButton" type="button" (click)="onCloseClick()" class="transparent">
+    <button vcl-button square *ngIf="showCloseButton" type="button" (click)="onCloseClick()" class="transparent">
       <vcl-icon icon="vcl:close"></vcl-icon>
     </button>  
   </div>
