--- a/demo/app/demos/input/demo.component.html
+++ b/demo/app/demos/input/demo.component.html
@@ -13,6 +13,17 @@
 </vcl-form-control-group>
 
 <vcl-form-control-group>
+  <vcl-label>Email</vcl-label>
+  <vcl-input-field>
+    <vcl-icon icon="mdi:email"></vcl-icon>
+    <input vclInput [(ngModel)]="data1" />
+    <button vcl-button square>
+      <vcl-icon icon="mdi:close"></vcl-icon>
+    </button>
+  </vcl-input-field>
+</vcl-form-control-group>
+
+<vcl-form-control-group>
   <vcl-label>Readonly input</vcl-label>
   <vcl-input-field>
     <input vclInput value='readonly' [readonly]="true" />
