--- a/lib/ng-vcl/src/gallery/gallery-body.component.html
+++ b/lib/ng-vcl/src/gallery/gallery-body.component.html
@@ -4,7 +4,7 @@
   </button>
 
   <div #imageContainer style="position: relative; width: 100%; height: 100%; transition: transform 0.5s" [ngStyle]="imageContainerStyle">
-    <img *ngFor="let img of target.imageArray; let i = index" [attr.data-index]="i" (click)="target.selectImage(i)" (load)="imageLoaded()" [src]="img.image" [alt]="img.alt" style="touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); position: absolute; left: 0; top: 0">
+    <img *ngFor="let img of target.imageArray; let i = index" [attr.data-index]="i" (click)="target.selectImage(i)" (load)="imageLoaded()" [src]="img.image" [alt]="img.alt" style="touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); position: absolute; left: 0; top: 0; max-width: 100%">
   </div>
 
   <button  *ngIf="target.selectedImage < (target.images ? target.images.length - 1 : 0) || target.wrap" vcl-button type="button" class="gallery-next-button" (click)="selectNext()" aria-label="Next" >
