--- a/demo/app/demos/gallery/demo.component.html
+++ b/demo/app/demos/gallery/demo.component.html
@@ -1,7 +1,7 @@
-<vcl-gallery [selectedImage]="0">
+<vcl-gallery [selectedImage]="1">
   <vcl-gallery-image image="https://picsum.photos/600/500?image=450" thumbnail="https://picsum.photos/200/200?image=450" alt="Image 1"></vcl-gallery-image>
   <vcl-gallery-image image="https://picsum.photos/600/500?image=451" thumbnail="https://picsum.photos/200/200?image=451" alt="Image 2"></vcl-gallery-image>
-  <vcl-gallery-image image="https://upload.wikimedia.org/wikipedia/commons/3/3f/Walking_tiger_female.jpg" thumbnail="https://picsum.photos/200/200?image=452" alt="Image 3"></vcl-gallery-image>
+  <vcl-gallery-image image="https://picsum.photos/600/500?image=452" thumbnail="https://picsum.photos/200/200?image=452" alt="Image 3"></vcl-gallery-image>
   <vcl-gallery-image image="https://picsum.photos/600/500?image=453" thumbnail="https://picsum.photos/200/200?image=453" alt="Image 4"></vcl-gallery-image>
 
   <div class="gallery-header">
