--- a/lib/ng-vcl/src/gallery/gallery-body.component.html
+++ b/lib/ng-vcl/src/gallery/gallery-body.component.html
@@ -3,7 +3,7 @@
     <vcl-icon icon="vcl:arrow-left"></vcl-icon>
   </button>
 
-  <div #imageContainer style="position: relative; width: 100%; height: 100%; transition: transform 0.5s" [ngStyle]="imageContainerStyle">
+  <div #imageContainer style="position: relative; width: 100%; height: 100%; transition: transform 0.5s;" [ngStyle]="imageContainerStyle">
     <img *ngFor="let img of target.imageArray; let i = index" [attr.data-index]="i" (click)="target.selectImage(i)" (load)="imageLoaded()" [src]="img.image" [alt]="img.alt" style="touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); position: absolute; left: 0; top: 0; max-width: 100%;">
   </div>
 
