Take out col class in app.component.html main div

--- a/demo/app/components/app/app.component.html
+++ b/demo/app/components/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="col docMain">
+<div class="docMain">
     <header class="application-header row center justify-between">
       <button vcl-button square class="transparent" *ngIf="xsmall" (click)="drawer.toggle()">
         <vcl-icon icon="vcl:menu" class="scale180p"></vcl-icon>
