--- a/lib/ng-vcl/src/gallery/gallery-body.component.html
+++ b/lib/ng-vcl/src/gallery/gallery-body.component.html
@@ -1,10 +1,10 @@
-<div class="gallery-content" style="overflow: hidden;" (touchstart)="swipe($event, 'start')" (touchend)="swipe($event, 'end')">
+<div class="gallery-content" (touchstart)="swipe($event, 'start')" (touchend)="swipe($event, 'end')">
   <button *ngIf="target.selectedImage > 0 || target.wrap" vcl-button type="button" class="gallery-prev-button" (click)="selectPrevious()" aria-label="Previous">
     <vcl-icon icon="vcl:arrow-left"></vcl-icon>
   </button>
 
-  <div #imageContainer style="position: relative; width: 100%; height: 100%; transition: transform 0.5s;" [ngStyle]="imageContainerStyle">
-    <img *ngFor="let img of target.imageArray; let i = index" [attr.data-index]="i" (click)="target.selectImage(i)" (load)="imageLoaded()" [src]="img.image" [alt]="img.alt" style="touch-action: pan-y; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0); position: absolute; left: 0; top: 0; max-width: 100%;">
+  <div #imageContainer [ngStyle]="imageContainerStyle" class="gallery-images-container">
+    <img *ngFor="let img of target.imageArray; let i = index" [attr.data-index]="i" (click)="target.selectImage(i)" (load)="imageLoaded()" [src]="img.image" [alt]="img.alt" class="gallery-image">
   </div>
 
   <button  *ngIf="target.selectedImage < (target.images ? target.images.length - 1 : 0) || target.wrap" vcl-button type="button" class="gallery-next-button" (click)="selectNext()" aria-label="Next" >
