Add switch to switch between wrapped, height restricted gallery and normal one

--- a/lib/ng-vcl/src/gallery/gallery-body.component.html
+++ b/lib/ng-vcl/src/gallery/gallery-body.component.html
@@ -1,10 +1,10 @@
-<div class="gallery-content" (touchstart)="swipe($event, 'start')" (touchend)="swipe($event, 'end')">
+<div #galleryContent class="gallery-content" (touchstart)="swipe($event, 'start')" (touchend)="swipe($event, 'end')" style="height: 100%;">
   <button *ngIf="target.selectedImage > 0 || target.wrap" vcl-button type="button" class="gallery-prev-button" (click)="selectPrevious()" aria-label="Previous">
     <vcl-icon icon="vcl:arrow-left"></vcl-icon>
   </button>
 
   <div #imageContainer [ngStyle]="imageContainerStyle" class="gallery-images-container">
-    <img *ngFor="let img of target.imageArray; let i = index" [attr.data-index]="i" (click)="target.selectImage(i)" (load)="imageLoaded()" [src]="img.image" [alt]="img.alt" class="gallery-image">
+    <img *ngFor="let img of target.imageArray; let i = index" [attr.data-index]="i" (click)="target.selectImage(i)" (load)="imageLoaded()" [src]="img.image" [alt]="img.alt" class="gallery-image" [ngStyle]="{'max-height':wrapped === true ? '100%' : 'auto' }">
   </div>
 
   <button  *ngIf="target.selectedImage < (target.images ? target.images.length - 1 : 0) || target.wrap" vcl-button type="button" class="gallery-next-button" (click)="selectNext()" aria-label="Next" >
