--- a/lib/ng-vcl/src/gallery/gallery.component.html
+++ b/lib/ng-vcl/src/gallery/gallery.component.html
@@ -1,3 +1,3 @@
-<div class="gallery" touch-action="pan-y">
+<div class="gallery" touch-action="pan-y" style="height: 100%; display: flex; flex-direction: column;">
   <ng-content></ng-content>
 </div>
