--- a/lib/ng-vcl/src/gallery/gallery-thumbnails.component.html
+++ b/lib/ng-vcl/src/gallery/gallery-thumbnails.component.html
@@ -1,6 +1,6 @@
-<div touch-action="pan-y" [ngClass]="vertical ? 'gallery-thumbs-vertical' : 'gallery-thumbs'">
-  <div [ngClass]="vertical ? 'gallery-thumbs-container-vertical' : 'gallery-thumbs-container'">
-    <div *ngFor="let image of target.images; let i = index" class="gallery-thumb-wrapper" [ngClass]="{'selected': i == target.selectedImage}" (click)="target.selectImage(i)">
+<div #galleryThumbs class="gallery-thumbs" touch-action="pan-y">
+  <div class="gallery-thumbs-container">
+    <div  class="gallery-thumb-wrapper" *ngFor="let image of target.images; let i = index" [ngClass]="{'selected': i == target.selectedImage}" (click)="target.selectImage(i)">
       <img class="gallery-thumb" [src]="image.thumbnail || image.image" [alt]="image.alt">
     </div>
   </div>
