fix(button): fix vclPrepend and vclAppend for icogram

--- a/lib/ng-vcl/src/button/button.component.html
+++ b/lib/ng-vcl/src/button/button.component.html
@@ -1,4 +1,6 @@
 <vcl-icogram>
+  <ng-content vclPrepend select="[vclPrepend]"></ng-content>
   <ng-content></ng-content>
+  <ng-content vclAppend select="[vclAppend]"></ng-content>
 </vcl-icogram>
 <ng-content select="vcl-icogram"></ng-content>
