--- a/lib/ng-vcl/src/icogram/icogram.component.html
+++ b/lib/ng-vcl/src/icogram/icogram.component.html
@@ -1,5 +1,5 @@
-<ng-content select="vcl-icon[vclPrepend]"></ng-content>
+<ng-content select="[vclPrepend]"></ng-content>
 <span class="text">
   <ng-content></ng-content>
 </span>
-<ng-content select="vcl-icon[vclAppend]"></ng-content>
+<ng-content select="[vclAppend]"></ng-content>
